# agentic-notes

./: .codecov.yml  README.md  pyproject.toml
.github/workflows/: python-tests.yml  security-scan.yml
docs/: usage.md
src/agentic_note/: __init__.py  cli.py  note.py
tests/: conftest.py  test_cli.py  test_note.py
